# vault-sync-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: crd.rs  crdgen.rs  main.rs  telemetry.rs  vault.rs
